@@ -50,10 +50,10 @@ class ModeratedMemberPost(Hold.ModeratedPost):
 def process(mlist, msg, msgdata):
     if msgdata.get('approved'):
         return
-    # Before anything else, check DMARC.
+    # Before anything else, check DMARC if necessary.
     msgdata['from_is_list'] = 0
     dn, addr = parseaddr(msg.get('from'))
-    if addr:
+    if addr and mlist.dmarc_moderation_action > 0:
         if Utils.IsDMARCProhibited(addr):
             # Note that for dmarc_moderation_action, 0 = Accept, 
             #    1 = Munge, 2 = Wrap, 3 = Reject, 4 = Discard
